--- a/front-end/src/app/shared/partials/header/header.component.html
+++ b/front-end/src/app/shared/partials/header/header.component.html
@@ -11,6 +11,11 @@
     <div class="header__links">
       <ul class="nav navbar-nav nav-links">
         <li class="nav-item">
+          <a [routerLink]="['/dashboard']">
+            Dashboard
+          </a>
+        </li>        
+        <li class="nav-item">
           <a [routerLink]="['/reports']">
             Reports
           </a>
