--- a/front-end/src/app/app-layout/app-layout.component.scss
+++ b/front-end/src/app/app-layout/app-layout.component.scss
@@ -60,18 +60,19 @@
         }         
       } 
       .app__top-logo { 
+        float: left;
         margin: 0 !important;
         padding: 0 !important;
         img {
-          width: 250px;
+          width: 200px;
           @include media(tablet) {
-            width: 270px;
+            width: 200px;
           }
           @include media(mediumDesktop) {
-            width: 280px;
+            width: 200px;
           }         
           @include media(largeDesktop) {
-            width: 350px;
+            width: 275px;
           }           
         }
       } // .app__top-logo
@@ -109,12 +110,13 @@
           width: auto;
         }           
         @include media(mediumDesktop) {
-          width: 65%;
+          width: 80%;
         }         
         @include media(largeDesktop) {
-          width: 73%;
+          width: 90%;
         }         
       }
+      @include clearfix();
     } 
     @include clearfix();
   } // .app__top  
