--- a/front-end/src/app/shared/partials/header/header.component.scss
+++ b/front-end/src/app/shared/partials/header/header.component.scss
@@ -2,11 +2,14 @@
 .header {
   color: $black;
   display: block;
-  height: 60px;
+  height: $topNavHeight;
+  line-height: $topNavHeight;
+  vertical-align: middle;
   width: 100%;
   .header__nav {
     display: flex;
     flex-direction: column;
+    height: 100%;
     width: 100%;
     @include media(tablet) {
       display: flex;
@@ -48,11 +51,12 @@
         }         
       }
       @include media(mediumDesktop) {
-        display: inline-block;
+        //display: inline-block;
+        float: left;
         padding-left: 5px;
         width: 15%;
         input[type='text'] {
-          @include make-text-input(85%, 1.5em, 1em, 1em);
+          @include make-text-input(80%, 1.5em, 1em, 1em);
           position: relative;
           transition: all .5s;
           z-index: 1002;
@@ -64,11 +68,12 @@
         }          
       }
       @include media(largeDesktop) {
-        display: inline-block;
+        // display: inline-block;
+        float: left;
         padding-left: 15px;
         width: 20%;
         input[type='text'] {
-          @include make-text-input(100%, 1.5em, 1em, 1em);
+          @include make-text-input(80%, 1.5em, 1em, 1em);
         }        
       }
     }
@@ -86,14 +91,14 @@
         width: 100%;
       }
       @include media(mediumDesktop) {
-        display: inline-block;
-        padding-left: 15px;
-        width: 80%;
+        //display: inline-block;
+        float: left;
+        width: 78%;
       } 
       @include media(largeDesktop) {
-        display: inline-block;
-        padding-left: 30px;
-        width: 74%;
+        // display: inline-block;
+        float: left;
+        width: 78%;
       }
       .nav-links {
         list-style-type: none;
