--- a/front-end/src/app/login/login.component.html
+++ b/front-end/src/app/login/login.component.html
@@ -14,7 +14,7 @@
 
       <header>
         <div class="title">
-          <h1>FEC eFile</h1>
+          <h1>{{ appTitle }}</h1>
         </div>
       </header>
 
