--- a/front-end/src/app/forms/form-99/reason/reason.component.scss
+++ b/front-end/src/app/forms/form-99/reason/reason.component.scss
@@ -114,12 +114,11 @@
         margin-left: auto;
         margin-right: auto;
         margin-top: 20px;
-        height: 200px !important; //mahendra 11202018
         z-index: 0;
         textarea {
           border-radius: 3px;
           font-size: 1em;
-          height: 100px !important; //mahendra 11202018
+          height: 400px;
           overflow: scroll;
           padding: 10px;
           width: 90%;
