--- a/front-end/src/app/forms/form-99/type/type.component.html
+++ b/front-end/src/app/forms/form-99/type/type.component.html
@@ -88,7 +88,7 @@
                         class="type-text"
                         (click)="updateTypeSelected('MSM')"
                       >
-                        Filing Frequency Change Notice (MSM)
+                        Filing Frequency Chance Notice (MSM)
                       </label>
                       <div
                         class="type-radio"
@@ -134,7 +134,7 @@
                         class="type-text"
                         (click)="updateTypeSelected('MSI')"
                       >
-                        Disavowal Response (MST)
+                        Disavowal Response (MSI)
                       </label>
                       <div
                         class="type-radio"
