--- a/front-end/src/app/forms/form-99/form/form.component.scss
+++ b/front-end/src/app/forms/form-99/form/form.component.scss
@@ -94,7 +94,18 @@
       width: 90%;
     }          
     .form__content {
-      width: 100%; 
+      height: 100%;
+      width: 100%;
+      padding-left: 2px;
+      @include media(tablet) {
+        padding-left: 2px;
+      }
+      @include media(mediumDesktop) {
+        padding-left: 0;
+      }         
+      @include media(largeDesktop) {
+        padding-left: 0;
+      }        
       &.hide-alerts {
         .form__step {
           padding-left: 0 !important;
