--- a/front-end/src/styles.scss
+++ b/front-end/src/styles.scss
@@ -35,6 +35,11 @@ ul {
   -webkit-margin-start: 0;
   -webkit-margin-end: 0;
   -webkit-padding-start: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  padding-inline-start: 0;  
   li {
     -webkit-margin-before: 0;
     -webkit-margin-after: 0;
