committing Mahendra's changes

--- a/front-end/src/app/forms/form-99/type/type.component.html
+++ b/front-end/src/app/forms/form-99/type/type.component.html
@@ -42,7 +42,8 @@
                         class="type-text"
                         (click)="updateTypeSelected('MST')"
                       >
-                        Miscellaneous Report to FEC (MST)
+                        <!--Miscellaneous Report to FEC (MST)-->
+                          Miscellaneous Text submission to FEC (MST)
                       </label>
                       <div
                         class="type-radio"
@@ -88,7 +89,7 @@
                         class="type-text"
                         (click)="updateTypeSelected('MSM')"
                       >
-                        Filing Frequency Change Notice (MSM)
+                        Filing Frequency Chance Notice (MSM)
                       </label>
                       <div
                         class="type-radio"
@@ -134,7 +135,7 @@
                         class="type-text"
                         (click)="updateTypeSelected('MSI')"
                       >
-                        Disavowal Response (MST)
+                        Disavowal Response (MSI)
                       </label>
                       <div
                         class="type-radio"
