--- a/front-end/src/app/shared/partials/sidebar/sidebar.component.html
+++ b/front-end/src/app/shared/partials/sidebar/sidebar.component.html
@@ -19,13 +19,10 @@
         <div class="sidebar__nav--links">
           <ul class="links-list">
             <li>
-              Form...
+              PAC & Party Report of Receipts & Disbursements (F3X)
             </li>
             <li>
-              Test
-            </li>
-            <li>
-              Test
+              Report of Contributors Bundled (F3L)
             </li>
           </ul>
         </div>
@@ -40,7 +37,7 @@
                 [routerLink]="['/forms/form/', '99']"
                 [queryParams]="{ step: 'step_1' }"
               >
-                Form 99
+              Miscellaneous Report to the FEC (F99)
               </a>
             </li>
           </ul>
