--- a/front-end/src/app/shared/partials/sidebar/sidebar.component.scss
+++ b/front-end/src/app/shared/partials/sidebar/sidebar.component.scss
@@ -21,7 +21,7 @@
   }
   .sidebar__nav {
   	color: $white;
-    text-align: center;
+    text-align: left;
     .sidebar__nav--header {
       font-weight: bold;
     }
