--- a/front-end/src/app/account/account.component.html
+++ b/front-end/src/app/account/account.component.html
@@ -1,3 +1,182 @@
 <div class="account-container">
-	<h1 class="text-center">Account</h1>
+		<header>
+		  <div class="header-container">
+			<div class="header__text">
+			<h1>Account</h1>
+			</div>
+		  </div>   
+		  <div class="grid-row">
+			<div class="grid-row__col grid-row__col--12">
+				  <hr />
+			</div>
+ 		 </div>     
+		</header>
+		<section>
+		  <div class="content">
+			<div class="grid-row">
+			  <div class="grid-col">
+				<p>
+				  <b>Committee Name</b>
+				</p>
+				<p>
+				  {{ accounts?.committeename }}
+				</p>
+			  </div>
+			  <div class="grid-col">
+					<p>
+					  <b>Committee ID</b>
+					</p>
+					<p>
+					  {{ accounts?.committeeid }}
+					</p>
+			  </div>			  
+			</div>
+			<div class="grid-row">
+				<div class="grid-col">
+					<p><b>Address Line 1</b></p>
+					<p>
+					  {{ accounts?.street1 }}
+					</p>
+				</div>
+				<div class="grid-col">
+					<p><b>Address Line 2</b></p>
+					<p>
+					  {{ accounts?.street2 }}
+					</p>
+				</div> 
+			</div>
+			<div class="grid-row">
+			  <div class="grid-col">
+				<p>
+				  <b>City</b>
+				</p>
+				<p>
+				  {{ accounts?.city }}
+				</p>
+			  </div>
+			  <div class="grid-col">
+				<p>
+				  <b>State</b>
+				</p>
+				<p>
+				  {{ accounts?.state }}
+				</p>
+			  </div>
+			  <div class="grid-col">
+				<p>
+				  <b>Zip Code</b>
+				</p>
+				<p>
+				  {{ accounts?.zipcode }}
+				</p>
+			  </div>
+			</div>
+			<div class="grid-row">
+					<div class="grid-row__col grid-row__col--12">
+					  <hr />
+					</div>
+
+			</div> 		
+			<div class="grid-row">
+			  <div class="grid-col">
+				<p>
+				  <b>Treasurer First Name</b>
+				</p>
+				<p>
+				  {{ accounts?.treasurerfirstname }}
+				</p>
+			  </div>        
+			  <div class="grid-col">
+				<p>
+				  <b>Treasurer Middle Name</b>
+				</p>
+				<p>
+				 {{ accounts?.treasurermiddlename }}
+				</p>
+			  </div>
+			  <div class="grid-col">
+				<p>
+				  <b>Treasurer Last Name</b>
+				</p>
+				<p>
+				 {{ accounts?.treasurerlastname }}
+				</p>
+			  </div>
+			</div>
+			<div class="grid-row">
+			  <div class="grid-col">
+				<p>
+				  <b>Treasurer Prefix</b>
+				</p>
+				<p>
+				 {{ accounts?.treasurerprefix }}
+				</p>
+			  </div>
+			  <div class="grid-col">
+				<p>
+				  <b>Treasurer Sufix</b>
+				</p>
+				<p>
+				 {{ accounts?.treasurersuffix }}
+				</p>
+			  </div>        
+			</div>
+			<div class="grid-row">
+					<div class="grid-col">
+						<p><b>Address Line 1</b></p>
+						<p>
+						  {{ accounts?.treasurerstreet1 }}
+						</p>
+					</div>
+					<div class="grid-col">
+						<p><b>Address Line 2</b></p>
+						<p>
+						  {{ accounts?.treasurerstreet2 }}
+						</p>
+					</div> 
+			</div>
+			<div class="grid-row">
+				  <div class="grid-col">
+					<p>
+					  <b>City</b>
+					</p>
+					<p>
+					  {{ accounts?.treasurercity }}
+					</p>
+				  </div>
+				  <div class="grid-col">
+					<p>
+					  <b>State</b>
+					</p>
+					<p>
+					  {{ accounts?.treasurerstate }}
+					</p>
+				  </div>
+				  <div class="grid-col">
+					<p>
+					  <b>Zip Code</b>
+					</p>
+					<p>
+					  {{ accounts?.treasurerzipcode }}
+					</p>
+				  </div>
+			</div>			
+			<div class="grid-row">
+				  <div class="grid-col">
+					<p>
+					  <b>Email</b>
+					</p>
+					<p>
+					  {{ accounts?.email_on_file }}
+					</p>
+				  </div>
+			</div>					
+			<div class="grid-row">
+			  <div class="grid-row__col grid-row__col--12">
+				<hr />
+			  </div>
+			</div>
+		  </div> <!-- ./content -->
+		</section>
 </div>
+	  
