--- a/front-end/src/app/shared/scss/_custom-colors.scss
+++ b/front-end/src/app/shared/scss/_custom-colors.scss
@@ -1,5 +1,6 @@
 // FEC Colors
 $alto: #D8D8D8; // gray
+$iron: #D6D7D9;
 $bombay: #AEB0B5; // middle gray
 $dustyGray: #9B9B9B; // dark gray
 $shuttleGray: #5B616B; //really dark gray
