--- a/front-end/src/app/shared/partials/sidebar/sidebar.component.html
+++ b/front-end/src/app/shared/partials/sidebar/sidebar.component.html
@@ -19,10 +19,13 @@
         <div class="sidebar__nav--links">
           <ul class="links-list">
             <li>
-              PAC & Party Report of Receipts & Disbursements (F3X)
+              Form...
             </li>
             <li>
-              Report of Contributors Bundled (F3L)
+              Test
+            </li>
+            <li>
+              Test
             </li>
           </ul>
         </div>
@@ -37,7 +40,7 @@
                 [routerLink]="['/forms/form/', '99']"
                 [queryParams]="{ step: 'step_1' }"
               >
-              Miscellaneous Report to the FEC (F99)
+                Form 99
               </a>
             </li>
           </ul>
