--- a/front-end/src/app/shared/partials/header/header.component.scss
+++ b/front-end/src/app/shared/partials/header/header.component.scss
@@ -51,7 +51,6 @@
         }         
       }
       @include media(mediumDesktop) {
-        //display: inline-block;
         float: left;
         padding-left: 5px;
         width: 15%;
@@ -68,7 +67,6 @@
         }          
       }
       @include media(largeDesktop) {
-        // display: inline-block;
         float: left;
         padding-left: 15px;
         width: 20%;
@@ -101,7 +99,7 @@
       .nav-links {
         list-style-type: none;
         width: 100%;
-        li {
+        .nav-item {
           display: block;
           margin-bottom: 10px;
           padding-left: 10px;
@@ -141,8 +139,12 @@
           .dropdown-toggle {
             cursor: pointer;
             display: inline-block;
-            &:hover {
+            &:hover
+            &:active {
               text-decoration: underline;
+            }
+            &[aria-expanded='true'] {
+              background-color: $iron;
             }
           }
           .dropdown {                    
@@ -182,8 +184,38 @@
               }              
             }
           }
-        }
-      }
-    }
-  }
-}
+          .secondary-dropdown-menu {
+            background-color: $dustyGray;
+            margin: 0;
+            padding: 0;
+            height: 40px;
+            @include media(mediumDesktop) {
+              border-top: 0;
+              margin: 0;
+              padding: 0; 
+              top: 60px;    
+              height: auto;         
+            }         
+            @include media(largeDesktop) {
+              border-top: 0;
+              margin: 0;
+              padding: 0;
+              top: 60px;  
+              height: auto;                
+            }             
+            div {
+              @include media(mediumDesktop) {
+                height: 40px !important;
+                line-height: 40px;
+              }         
+              @include media(largeDesktop) {
+                height: 40px !important;
+                line-height: 40px;
+              }               
+            }
+          }
+        } // .nav-item
+      } // .nav-links
+    } // .header__links
+  } // .header__nav
+} // .header
