added type component

--- a/front-end/src/app/forms/form-99/type/type.component.html
+++ b/front-end/src/app/forms/form-99/type/type.component.html
@@ -43,7 +43,7 @@
                         (click)="updateTypeSelected('MST')"
                       >
                         <!--Miscellaneous Report to FEC (MST)-->
-                          Miscellaneous Text submission to FEC (MST)
+                          Miscellaneous Text Submission to FEC (MST)
                       </label>
                       <div
                         class="type-radio"
@@ -89,7 +89,7 @@
                         class="type-text"
                         (click)="updateTypeSelected('MSM')"
                       >
-                        Filing Frequency Chance Notice (MSM)
+                        Filing Frequency Change Notice (MSM)
                       </label>
                       <div
                         class="type-radio"
