--- a/front-end/src/app/app-layout/app-layout.component.scss
+++ b/front-end/src/app/app-layout/app-layout.component.scss
@@ -83,14 +83,14 @@
           background: $dustyGray;
           display: block;
           float: none;
-          height: 620px;
+          height: 675px;
           position: absolute;
           top: 60px;
           width: 100%;
           @include media(tablet) {
             display: block;
             float: none;
-            height: 620px;
+            height: 675px;
             position: absolute;
             top: 60px;
             width: 100%;
@@ -106,7 +106,7 @@
             top: 0;
           }                 
         }        
-        @include media(mediumDesktop) {
+        @include media(tablet) {
           width: auto;
         }           
         @include media(mediumDesktop) {
