--- a/front-end/src/app/shared/partials/header/header.component.scss
+++ b/front-end/src/app/shared/partials/header/header.component.scss
@@ -68,8 +68,8 @@
       }
       @include media(largeDesktop) {
         float: left;
-        padding-left: 15px;
-        width: 20%;
+        padding-left: 5px;
+        width: 18%;
         input[type='text'] {
           @include make-text-input(80%, 1.5em, 1em, 1em);
         }        
@@ -90,11 +90,11 @@
       }
       @include media(mediumDesktop) {
         float: left;
-        width: 78%;
+        width: 80%;
       } 
       @include media(largeDesktop) {
         float: left;
-        width: 78%;
+        width: 80%;
       }
       .nav-links {
         list-style-type: none;
@@ -188,21 +188,40 @@
             background-color: $dustyGray;
             margin: 0;
             padding: 0;
-            height: 40px;
-            @include media(mediumDesktop) {
-              border-top: 0;
-              margin: 0;
-              padding: 0; 
-              top: 60px;    
-              height: auto;         
-            }         
-            @include media(largeDesktop) {
-              border-top: 0;
-              margin: 0;
-              padding: 0;
-              top: 60px;  
-              height: auto;                
-            }             
+            &.profile {
+              height: 40px;
+              @include media(mediumDesktop) {
+                border-top: 0;
+                margin: 0;
+                padding: 0; 
+                top: 60px;    
+                height: auto;         
+              }         
+              @include media(largeDesktop) {
+                border-top: 0;
+                margin: 0;
+                padding: 0;
+                top: 60px;  
+                height: auto;                
+              }               
+            }
+            &.tools {
+              height: auto;
+              @include media(mediumDesktop) {
+                border-top: 0;
+                margin: 0;
+                padding: 0; 
+                top: 60px;    
+                height: auto;         
+              }         
+              @include media(largeDesktop) {
+                border-top: 0;
+                margin: 0;
+                padding: 0;
+                top: 60px;  
+                height: auto;                
+              }               
+            }
             div {
               @include media(mediumDesktop) {
                 height: 40px !important;
